k8s/app/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops
  labels:
    app: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: nginx:1.27-alpine
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 64Mi

            limits:
              cpu: 250m
              memory: 128Mi

          volumeMounts:
            - name: backend-storage
              mountPath: /data

      volumes:
        - name: backend-storage
          persistentVolumeClaim:
            claimName: backend-storage
