k8s/app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devops

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
