k8s/app/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: devops
  labels:
    app: redis
spec:
  type: ClusterIP

  selector:
    app: redis

  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: redis
