k8s/app/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-app
  namespace: devops

spec:
  type: ClusterIP

  selector:
    app: web-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
