k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: web-app
  namespace: devops

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - web-app.local
      secretName: web-app-tls

  rules:
    - host: web-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 80
